--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "*"
   }
 }
