--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass-loader": "*",
     "style-loader": "*",
     "terser-webpack-plugin": "*",
+    "video.js": "^7.7.5",
     "webpack": "^4.41",
     "webpack-cli": "^3.3",
     "webpack-dev-server": "^3.10",
@@ -59,12 +60,14 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-player": "^2.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
-    "styled-components": "*"
+    "styled-components": "*",
+    "videojs-youtube": "^2.6.1"
   }
 }
