--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "webpack-merge": "^4.2"
   },
   "dependencies": {
-    "axios": "*",
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "minimist": "^1.2.5",
+    "nodemailer": "^6.4.6",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
