--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "minimist": "^1.2.5",
     "prop-types": "*",
     "react": "*",
